[package]
name = "endian-num"
version = "0.1.2"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Byte-order-aware numeric types."
repository = "https://github.com/rust-osdev/endian-num"
license = "MIT OR Apache-2.0"
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
categories = ["encoding", "rust-patterns", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = { version = "2", optional = true }
bytemuck = { version = "1", optional = true }
bytemuck_derive = { version = "1", optional = true }
zerocopy = { version = "0.8", optional = true, default-features = false }
zerocopy-derive = { version = "0.8", optional = true }

[features]
bitflags = ["dep:bitflags"]
bytemuck = ["dep:bytemuck", "dep:bytemuck_derive"]
linux-types = []
zerocopy = ["dep:zerocopy", "dep:zerocopy-derive"]
